# MPR

./: .cproject  .project  CMakeLists.txt
examples/: CMakeLists.txt  MPR_example_utils.h  benchmark.c  benchmark_read.c  benchmark_write.c  multiple_precision_read.c  multiple_precision_write.c  multiple_resolution_precision_read.c  multiple_resolution_precision_write.c  multiple_resolution_read.c  multiple_resolution_write.c  raw_read.c  raw_write.c  zfp_io_only_read.c  zfp_io_only_write.c
include/: MPR.h  MPR_define.h  csvWrite.h  logging_api.h
src/: CMakeLists.txt  MPR_close.c  MPR_file_create.c  MPR_file_open.c  MPR_inc.h
src/comm/: CMakeLists.txt  MPR_comm.c  MPR_comm.h
src/core/: CMakeLists.txt  MPR_aggregation.c  MPR_aggregation.h  MPR_compression.c  MPR_compression.h  MPR_partition.c  MPR_partition.h  MPR_restructure.c  MPR_restructure.h  MPR_wavelet.c  MPR_wavelet.h
src/data_handle/: CMakeLists.txt  MPR_data_types.c  MPR_get_set.c  MPR_variable.c
src/data_structs/: MPR_comm_structs.h  MPR_dataset_structs.h  MPR_file_structs.h  MPR_local_patch_structs.h  MPR_patch_structs.h  MPR_time_structs.h  MPR_variable_structs.h
src/io/: CMakeLists.txt  MPR_io.c  MPR_io.h  MPR_log_io.c  MPR_log_io.h  MPR_metadata_io.c  MPR_metadata_io.h  MPR_multipre_io.c  MPR_multipre_io.h  MPR_raw_io.c  MPR_raw_io.h  MPR_read_io.c  MPR_read_io.h  MPR_write_io.c  MPR_write_io.h
src/utils/: CMakeLists.txt  MPR_error_code.c  MPR_error_code.h  MPR_point.c  MPR_point.h  MPR_windows_utils.h
